* Version 2
 - fix long standing typo where the minute field in the rotated log was
   replaced with the current month: %m instead of %M (by dorian33 #3027782)

* Version 1
 - switch over to using daemon() by default
 - fix stupid semicolon typo causing breaks on all lines (Gentoo Bug #258830)
 - add "flush" keyword to control flushing per log output (by Martin von
   Gagern #2549231)
 - add --with-unicode option to control unicode mangling #2669923

* Version 0.9
 - add --no-kernel option by Adrian Perez de Castro to disable kernel message
   monitoring (#1727129 and #1751757)
 - convert source tree to use gnulib rather than random local replacements
 - fix by Amigac to not skip the "command" line when "logdir" and "break" are
   both in use (#2401520)
 - add "stamp_fmt" keyword to control the timestamp format in messages (based
   partially on work from cJ #1910360 and Philip White #1690349, and for
   #1232638)
 - make sure to flush all buffers on exit in buffered mode as pointed out by
   Ingo Bormuth (Gentoo Bug #233794)

* Version 0.8
 - tweak signal handlers some more (#1655169)
 - when dequeuing messages from the signal pipe, abort if malloc() failed
 - add hal filter to default metalog.conf (Gentoo Bug #174847)
 - add support from Eric Schwimmer / Debian for a new "postrotate_cmd"
   option (#1706160)
 - fix from Eric Schwimmer for div by zero error when maxtime = 0 (#1706158)
 - add support from Eric Schwimmer for controlling the "Last output repeated
   N times" message (#1706164)
 - use %e rather than %d for logging dates (Gentoo Bug #177258)

* Version 0.8-rc4
 - fix typo in previous change when checking the return of strftime()
   as reported by Mark Wagner.

* Version 0.8-rc3
 - use strftime() rather than printing out time values ourself so we get
   localization for free via the system libc and so we don't have to
   manipulate time structs ourselves (#1054478).

* Version 0.8-rc2
 - config file in package updated (pull fixes from Gentoo)